[package]
name = "link-archive"
version = "0.1.0"
edition = "2018"
default-run = "link-archive"

[dependencies]
tokio = { version = "1", features = ["full"] }
http-mux = { version = "0.1", features = ["hyper"] }
plumb = "0.2"
rusqlite = "0.25"
quick_from = "0.1.0"
rust-argon2 = "0.8"
jsonwebtoken = "7.2"
time = { version  = "0.3", features = ["macros", "formatting", "parsing"] }
cookie = "0.15"
serde_urlencoded = "0.7"
handlebars = "4.1"
rand = "0.8"
hyper = { version = "0.14", features = [ "tcp", "http1", "server" ] }
serde = { version = "1", features = ["derive"] }
url = "2"

# these deps are shared with the above deps, so reuse the versions already
# pulled in
bytes = "*"
http = "*"
